syntax = "proto3";
package game.v1;

// buf:lint:ignore RPC_NO_DELETE
service Game {
  // New methods for handling commands and events
  rpc ExecuteCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse) {}
  rpc CreateGame(CreateGameCommand) returns (GameCreatedEvent);
  rpc StartGame(StartGameCommand) returns (GameStartedEvent);
  rpc EndGame(EndGameCommand) returns (GameEndedEvent);
}

enum InterpType {
  INTERP_TYPE_UNSPECIFIED = 0;
  INTERP_TYPE_LOGIN = 1;
  INTERP_TYPE_PLAYING = 2;
  INTERP_TYPE_BUILDING = 3;
}

message LoginRequest {
  string player_id = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

// Command to create a new game
message CreateGameCommand {
  string game_id = 1;
  string player_id = 2;
}

// Event that a game was created
message GameCreatedEvent {
  string game_id = 1;
  string player_id = 2;
}

// Command to start a game
message StartGameCommand {
  string game_id = 1;
}

// Event that a game was started
message GameStartedEvent {
  string game_id = 1;
}

// Command to end a game
message EndGameCommand {
  string game_id = 1;
}

// Event that a game was ended
message GameEndedEvent {
  string game_id = 1;
}

message ExecuteCommandRequest {
  string command = 1;
  string game_id = 2;
  string player_id = 3;
}

message ExecuteCommandResponse {
  string result = 1;
  string game_id = 2;
  string command = 3;
}

message CommandExecutedEvent {
  string game_id = 1;
  string player_id = 2;
  string command = 3;
}